card group complete without arrow Icon fixed

--- a/index.html
+++ b/index.html
@@ -1,14 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Legal</title>
+<!-- Css Link -->
 <link rel="stylesheet" href="styles/style.css">
-    <title>Legal Solution</title>
-</head>
-<body>
-    
-</body>
+
+    <!-- Bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!-- fontawesome kit -->
+    <script src="https://kit.fontawesome.com/bd259666ae.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+
+
+
+    <div class="legal-practice w-50 m-auto text-center">
+<h1>The Legal Practice Area</h1>
+<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    </div>
+    <br>
+    <br>
+     <!-- ===============================Card Section======================== -->
+
+     <div class="card-group centering-card ">
+        <div class="card border rounded">
+            <div class="centering-image">
+                <img src="images/business.png" class="card-img-top" alt="...">
+
+            </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+            <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="">
+            <p><i class="fa-solid fa-arrow-right"></i></p>
+          </div>
+        </div>
+        <div class="card border rounded">
+            <div class="centering-image">
+                <img src="images/business.png" class="card-img-top" alt="...">
+
+            </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+            <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="">
+            <p><i class="fa-solid fa-arrow-right"></i></p>
+          </div>
+        </div>
+        <div class="card border rounded">
+            <div class="centering-image">
+                <img src="images/business.png" class="card-img-top" alt="...">
+
+            </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+            <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="">
+            <p><i class="fa-solid fa-arrow-right"></i></p>
+          </div>
+        </div>
+               
+      </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </body>
 </html>
