fixed icon in cardd

--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
             <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="">
-            <p><i class="fa-solid fa-arrow-right"></i></p>
+            <p class="text-center"><i class="fa-solid fa-arrow-right"></i></p>
+        </div>
+        </div>
+        <div class="card border rounded">
+            <div class="centering-image">
+                <img src="images/business.png" class="card-img-top" alt="...">
+
+            </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Card title</h5>
+            <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="">
+            <p class="text-center"><i class="fa-solid fa-arrow-right"></i></p>
+            
           </div>
         </div>
         <div class="card border rounded">
@@ -49,20 +63,7 @@
             <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="">
-            <p><i class="fa-solid fa-arrow-right"></i></p>
-          </div>
-        </div>
-        <div class="card border rounded">
-            <div class="centering-image">
-                <img src="images/business.png" class="card-img-top" alt="...">
-
-            </div>
-          <div class="card-body">
-            <h5 class="card-title text-center">Card title</h5>
-            <p class="card-text text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="">
-            <p><i class="fa-solid fa-arrow-right"></i></p>
+            <p class="text-center"><i class="fa-solid fa-arrow-right"></i></p>
           </div>
         </div>
                
