--- a/index.html
+++ b/index.html
@@ -87,21 +87,30 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/slider-1.jpg" class="d-block w-75 m-auto" alt="...">
+        <img src="images/slider-1.jpg" class="d-block w-100 m-auto" alt="...">
+
+
+
         <div class="carousel-caption d-none d-md-block">
+          <div class="small-image">
+            <img src="images/call.png" alt="">
+<h1>Awlad Hossain</h1>
+<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+
+          </div>
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/slider-2.jpg" class="d-block w-100" alt="...">
+        <img src="images/slider-2.jpg" class="d-block w-100 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Second slide label</h5>
           <p>Some representative placeholder content for the second slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/slider-3.jpg" class="d-block w-100" alt="...">
+        <img src="images/slider-3.jpg" class="d-block w-100 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
