--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 
           </div>
         </div>
-        <div class="carousel-item active">
-          <img src="images/slider-1.jpg" class="d-block w-100 m-auto" alt="...">
+        <div class="carousel-item ">
+          <img src="images/slider-2.jpg" class="d-block w-100 m-auto" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <div class="small-image">
               <img src="images/call.png" alt="">
@@ -127,8 +127,8 @@
 
           </div>
         </div>
-        <div class="carousel-item active">
-          <img src="images/slider-1.jpg" class="d-block w-100 m-auto" alt="...">
+        <div class="carousel-item">
+          <img src="images/slider-3.jpg" class="d-block w-100 m-auto" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <div class="small-image">
               <img src="images/call.png" alt="">
