--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
   <!-- ===========================carousel section=================================== -->
 
   <section>
-    <div>
-      <h1>What Our Client Say</h1>
-      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+    <div class="w-50 m-auto mt-5 mb-5">
+      <h1 class="text-center">What Our Client Say</h1>
+      <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
         some form, by injected humour.</p>
 
     </div>
